Resource limits and scripts to assist in large cluster tests (#13)
* WIP: Reosurce limits for large test

* Minor changes for testing

* Wip

* GC logging and verbose heart beating

* Utility scripts

* One more comamnd

* Small modificatrions to scripts

* Revert to java 8

* Update README.md

Co-Authored-By: chbatey <christopher.batey@gmail.com>

* Review feedback